--- a/public/index.html
+++ b/public/index.html
@@ -2,35 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Excalidraw | Hand-drawn look & feel • Collaborative • Secure</title>
+    <title>InSketch</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, shrink-to-fit=no"
     />
-    <meta name="referrer" content="origin" />
+    <!-- <meta name="referrer" content="origin" /> -->
 
     <meta name="mobile-web-app-capable" content="yes" />
 
     <meta name="theme-color" content="#000" />
 
     <!-- General tags -->
-    <meta
+    <!-- <meta
       name="description"
       content="Excalidraw is a virtual collaborative whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
-    />
-    <meta name="image" content="og-image.png" />
+    /> -->
+    <meta name="image" content="inApi-logo.png" />
+    
 
     <!-- OpenGraph tags -->
-    <meta property="og:url" content="https://excalidraw.com" />
-    <meta property="og:site_name" content="Excalidraw" />
+    <!-- <meta property="og:url" content="https://www.invc.vc" />
+    <meta property="og:site_name" content="WhiteBoard" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Excalidraw" />
+    <meta property="og:title" content="WhiteBoard" />
     <meta
       property="og:description"
-      content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
-    />
+      content="whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
+    /> -->
     <!-- OG tags require an absolute url for images -->
-    <meta
+    <!-- <meta
       property="og:image"
       name="twitter:image"
       content="https://excalidraw.com/og-image.png"
@@ -42,15 +43,15 @@
     />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="669" />
-    <meta property="og:image:alt" content="Excalidraw logo with byline." />
+    <meta property="og:image:alt" content="Excalidraw logo with byline." /> -->
 
     <!-- Twitter Card tags -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Excalidraw" />
     <meta
       name="twitter:description"
       content="Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them."
-    />
+    /> -->
 
     <script>
       // Redirect Excalidraw+ users which have auto-redirect enabled.
@@ -67,37 +68,15 @@
         // if its present redirect
         document.cookie.includes("excplus-autoredirect=true")
       ) {
-        window.location.href = "https://app.excalidraw.com";
+        window.location.href = "https://app.inapi.vc";
       }
     </script>
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="FaviconInApi.png" />
 
     <!-- Excalidraw version -->
-    <meta name="version" content="{version}" />
-
-    <link
-      rel="preload"
-      href="Virgil.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="Cascadia.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
-
-    <link
-      rel="manifest"
-      href="manifest.json"
-      style="--pwacompat-splash-font: 24px Virgil"
-    />
-
-    <link rel="stylesheet" href="fonts.css" type="text/css" />
+    <!-- <meta name="version" content="{version}" />
+excplusef="fonts.css" type="text/css" />
     <% if (process.env.REACT_APP_DEV_DISABLE_LIVE_RELOAD === "true") { %>
     <script>
       {
@@ -117,7 +96,7 @@
     <script>
       window.EXCALIDRAW_ASSET_PATH = "/";
       // setting this so that libraries installation reuses this window tab.
-      window.name = "_excalidraw";
+      window.name = "InSketch";
     </script>
     <% if (process.env.REACT_APP_GOOGLE_ANALYTICS_ID) { %>
     <script
@@ -185,7 +164,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <header>
-      <h1 class="visually-hidden">Excalidraw</h1>
+      <!-- <h1 class="visually-hidden">Excalidraw</h1> -->
     </header>
     <div id="root"></div>
   </body>
